<?xml version="1.0" encoding="utf-8"?>
<Keyboard
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:keyHeight="@dimen/key_num_height"
    android:keyWidth="10%p"
    android:horizontalGap="1%p"
    android:verticalGap="@dimen/key_vertical_gap">
    <Row>
        <Key android:keyWidth="8.9%p" android:codes="33" android:keyLabel="!" android:keyEdgeFlags="left" />
        <Key android:keyWidth="8.9%p" android:codes="64" android:keyLabel="@string/keyboard_key1" /><!--@-->
        <Key android:keyWidth="8.9%p" android:codes="35" android:keyLabel="#" />
        <Key android:keyWidth="8.9%p" android:codes="36" android:keyLabel="$" />
        <Key android:keyWidth="8.9%p" android:codes="37" android:keyLabel="%" />
        <Key android:keyWidth="8.9%p" android:codes="94" android:keyLabel="^" />
        <Key android:keyWidth="8.9%p" android:codes="38" android:keyLabel="@string/keyboard_key2" /><!--&-->
        <Key android:keyWidth="8.9%p" android:codes="42" android:keyLabel="*" />
        <Key android:keyWidth="8.9%p" android:codes="40" android:keyLabel="(" />
        <Key android:keyWidth="8.9%p" android:codes="41" android:keyLabel=")" android:keyEdgeFlags="right" />
    </Row>

    <Row>
        <Key android:keyWidth="8.9%p" android:codes="39"
            android:keyEdgeFlags="left" android:keyLabel="'" />
        <Key android:keyWidth="8.9%p" android:codes="34" android:keyLabel="@string/keyboard_key3" /> <!--"-->
        <Key android:keyWidth="8.9%p" android:codes="61" android:keyLabel="=" />
        <Key android:keyWidth="8.9%p" android:codes="95" android:keyLabel="_" />
        <Key android:keyWidth="8.9%p" android:codes="58" android:keyLabel=":" />
        <Key android:keyWidth="8.9%p" android:codes="59" android:keyLabel=";" />
        <Key android:keyWidth="8.9%p" android:codes="63" android:keyLabel="\?" />
        <Key android:keyWidth="8.9%p" android:codes="126" android:keyLabel="~" />
        <Key android:keyWidth="8.9%p" android:codes="124" android:keyLabel="|" />
        <Key android:keyWidth="8.9%p" android:codes="183" android:keyEdgeFlags="right"
            android:keyLabel="·" />
    </Row>

    <Row>
        <Key android:horizontalGap="3.5%p" android:keyWidth="9%p" android:codes="43" android:keyLabel="+" />
        <Key android:keyWidth="9%p" android:codes="45" android:keyLabel="-" />
        <Key android:keyWidth="9%p" android:codes="92" android:keyLabel="\\" />
        <Key android:keyWidth="9%p" android:codes="47" android:keyLabel="/" />
        <Key android:keyWidth="9%p" android:codes="91" android:keyLabel="[" />
        <Key android:keyWidth="9%p" android:codes="93" android:keyLabel="]" />
        <Key android:keyWidth="9%p" android:codes="123" android:keyLabel="{" />
        <Key android:keyWidth="9%p" android:codes="125" android:keyLabel="}" />
        <Key android:horizontalGap="3.5%p" android:keyWidth="13%p" android:codes="-5"
            android:isRepeatable="true"/>
    </Row>

    <Row android:rowEdgeFlags="bottom">
        <Key android:keyWidth="13%p" android:codes="-2"
            android:keyLabel="123" />
        <Key android:keyWidth="9%p" android:horizontalGap="1.5%p" android:codes="44" android:keyLabel="," />
        <Key android:keyWidth="9%p" android:codes="46" android:keyLabel="." />
        <Key android:keyWidth="9%p" android:codes="60" android:keyLabel="@string/keyboard_key4" />
        <!--<-->
        <!-->-->
        <Key android:keyWidth="9%p" android:codes="62" android:keyLabel="@string/keyboard_key5" />
        <Key android:keyWidth="9%p" android:codes="8364" android:keyLabel="€" />
        <Key android:keyWidth="9%p" android:codes="163" android:keyLabel="￡" />
        <Key android:keyWidth="9%p" android:codes="165" android:keyLabel="¥" />
        <Key android:keyWidth="13%p" android:codes="100860" android:horizontalGap="1.5%p"
            android:keyEdgeFlags="right" android:keyLabel="ABC" />
    </Row>
</Keyboard>