<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/safe_keyboard_dialog_scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/bg_keyboard_dialog_lib"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/safe_keyboard_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_title_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/safe_keyboard_safe_edit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/keyboard_demo_new"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="@id/safe_keyboard_dialog_title"
            app:layout_constraintTop_toBottomOf="@id/safe_keyboard_dialog_title" />

        <Button
            android:id="@+id/safe_keyboard_dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_keyboard_dialog_button_lib"
            android:text="@string/confirm"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/dialog_button_text_size"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/safe_keyboard_safe_edit" />

        <Button
            android:id="@+id/safe_keyboard_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_keyboard_dialog_button_lib"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/dialog_button_text_size"
            app:layout_constraintRight_toLeftOf="@+id/safe_keyboard_dialog_confirm"
            app:layout_constraintTop_toBottomOf="@+id/safe_keyboard_safe_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/safe_keyboard_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>